--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eGKqt3lMPjwyOpucqoF0mmSec0rQDrf4++17p4Sa7sY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/marinov2/public/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=marino2
 DB_USERNAME=root
 DB_PASSWORD=
 
