--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "filament/actions": "3.2",
         "filament/filament": "3.2",
         "filament/widgets": "3.2",
         "flowframe/laravel-trend": "^0.1.5",
@@ -14,7 +15,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "leandrocfe/filament-apex-charts": "^3.1",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "2.0",
+        "pxlrbt/filament-excel": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
