--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,20 @@
         "laravel/tinker": "^2.8",
         "leandrocfe/filament-apex-charts": "^3.1",
         "livewire/livewire": "^3.4",
+        "livewire/volt": "^1.0",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "2.0",
         "pxlrbt/filament-excel": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
+        "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
