--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "eightynine/filament-excel-import": "^3.0",
         "filament/actions": "3.2",
         "filament/filament": "3.2",
         "filament/widgets": "3.2",
