--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=marinodatatopupph@gmail.com
-MAIL_PASSWORD="dudm dnfh prhx umky"
+MAIL_PASSWORD="jani bwki dkbd xmmg"
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="marinodatatopupph@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
