--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:eGKqt3lMPjwyOpucqoF0mmSec0rQDrf4++17p4Sa7sY=
+APP_KEY=base64:nI+dno8trq3XZlqnUriB2Wo8feBBV2mxL8uAht6B3zI=
 APP_DEBUG=true
-APP_URL=http://localhost/marinov2/public/
+APP_URL=http://localhost/marinoV2/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=marino2
+DB_DATABASE=marino
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -19,7 +19,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
@@ -31,7 +31,7 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=marinodatatopupph@gmail.com
+MAIL_USERNAME="marinodatatopupph@gmail.com"
 MAIL_PASSWORD="jani bwki dkbd xmmg"
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="marinodatatopupph@gmail.com"
@@ -50,6 +50,7 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
+API_KEY="sk_21f0205763dbf5351b4b8252cf7c1826"
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
