--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "popper.js": "^1.16.1"
     }
 }
