--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.13",
         "laravel/tinker": "^2.8",
         "leandrocfe/filament-apex-charts": "^3.1",
         "livewire/livewire": "^3.4",
